[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Game/UI/Dialogs/RoomDialog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/UI/Dialogs/PreviewDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game/UI/Previews/GenericPreview.tscn" type="PackedScene" id=3]

[node name="RoomDialog" type="WindowDialog"]
margin_right = 450.0
margin_bottom = 350.0
window_title = "Room"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "This dialog shows settings relating to the room itself rather than the pieces, allowing the player to edit properties like the skybox."
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 450.0
margin_bottom = 320.0
size_flags_vertical = 3

[node name="Skybox" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3

[node name="CurrentSkyboxLabel" type="Label" parent="VBoxContainer/TabContainer/Skybox"]
margin_right = 442.0
margin_bottom = 20.0
text = "Current skybox:"

[node name="SkyboxPreview" parent="VBoxContainer/TabContainer/Skybox" instance=ExtResource( 3 )]
margin_top = 24.0
margin_right = 442.0
margin_bottom = 128.0
selectable = false

[node name="ChangeSkyboxButton" type="Button" parent="VBoxContainer/TabContainer/Skybox"]
margin_top = 132.0
margin_right = 442.0
margin_bottom = 158.0
text = "Change skybox"

[node name="ClearSkyboxButton" type="Button" parent="VBoxContainer/TabContainer/Skybox"]
margin_top = 162.0
margin_right = 442.0
margin_bottom = 188.0
text = "Clear skybox"

[node name="Lighting" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TypeLabel" type="Label" parent="VBoxContainer/TabContainer/Lighting"]
margin_right = 442.0
margin_bottom = 20.0
text = "Lamp Type"

[node name="TypeButton" type="OptionButton" parent="VBoxContainer/TabContainer/Lighting"]
margin_top = 24.0
margin_right = 442.0
margin_bottom = 50.0
text = "Sunlight"
items = [ "Sunlight", null, false, 0, null, "Spotlight", null, false, 1, null ]
selected = 0

[node name="IntensityLabel" type="Label" parent="VBoxContainer/TabContainer/Lighting"]
margin_top = 54.0
margin_right = 442.0
margin_bottom = 74.0
text = "Lamp Intensity"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Lighting"]
margin_top = 78.0
margin_right = 442.0
margin_bottom = 98.0

[node name="IntensitySlider" type="HSlider" parent="VBoxContainer/TabContainer/Lighting/HBoxContainer"]
margin_right = 388.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
max_value = 3.0
step = 0.05
value = 1.0

[node name="IntensityValueLabel" type="Label" parent="VBoxContainer/TabContainer/Lighting/HBoxContainer"]
margin_left = 392.0
margin_right = 442.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
text = "10%"

[node name="ColorLabel" type="Label" parent="VBoxContainer/TabContainer/Lighting"]
margin_top = 102.0
margin_right = 442.0
margin_bottom = 122.0
text = "Lamp Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/TabContainer/Lighting"]
margin_top = 126.0
margin_right = 442.0
margin_bottom = 152.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 450.0
margin_bottom = 350.0
alignment = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 398.0
margin_right = 450.0
margin_bottom = 26.0
disabled = true
text = "Apply"

[node name="SkyboxDialog" parent="." instance=ExtResource( 2 )]
window_title = "Select a skybox..."
db_types = {
"Skyboxes": "skyboxes"
}
status_text_multiple = "Loaded %d skyboxes."

[connection signal="about_to_show" from="." to="." method="_on_RoomDialog_about_to_show"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Skybox/ChangeSkyboxButton" to="." method="_on_ChangeSkyboxButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Skybox/ClearSkyboxButton" to="." method="_on_ClearSkyboxButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/Lighting/TypeButton" to="." method="_on_TypeButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Lighting/HBoxContainer/IntensitySlider" to="." method="_on_IntensitySlider_value_changed"]
[connection signal="color_changed" from="VBoxContainer/TabContainer/Lighting/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="entry_requested" from="SkyboxDialog" to="." method="_on_SkyboxDialog_entry_requested"]
